ex2/testdata/parser/error/TestCases-error-st-exp=exp.java
/**
 * Created by alka on 5/11/2017.
 */
class TestCaseserror {
    public static void main(String [] args)
    {
        int v;
        v=10;
        2*3=4/5;

	b = a + new c();

	if (1<v<100)
        {
        	8 = a;    
        }
        else
        {
        	a+1 = v; 
        }
	
    }
}
